fix for title visiblity on mobile screens

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
 
 .title {
     font-size: 7vmin;
-    -webkit-text-stroke:0.005px white;
+    -webkit-text-stroke:0.5px white;
     -webkit-text-fill-color:transparent;
     margin: 0;
 }
